# python-lib-template

./: 404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  search.html
.github/workflows/: ci-perso.yml  python-package.yml
description/about/: index.html
docs/: index.md  my-class.md
docs/description/: about.md
docs/objects/: my_class.md
getting_started/installation/: index.html
objects/my_class/: index.html
search/: search_index.json
src/my_lib/: __init__.py  my_class.py
tests/: test_my_class.py
