[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_lib"
dynamic = ["version"]
description = "A brief description of the project."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy"
]

[tool.hatch.version]
path = "src/my_lib/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "ruff",
    "pytest",
]

# # Linting configuration
[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W"]
lint.ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# Tests
# [tool.pytest.ini_options]
# addopts = "-ra -q"

# General scripts
[tool.hatch.envs.default.scripts]
lint = "ruff check ."
test = "pytest"

# Doc
[tool.hatch.envs.doc]
dependencies = [
    "mkdocs",
    "mkdocstrings-python"
]

[tool.hatch.envs.doc.scripts]
serve = "mkdocs serve"

